plugins {
    id 'java'
    id "com.diffplug.spotless" version "6.25.0"
}

group = 'org.modelador'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

tasks.withType(JavaCompile).configureEach {
    options.release = 21
}

dependencies {
    implementation 'com.miglayout:miglayout:3.7.4'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

jar {
    manifest {
        attributes 'Main-Class': 'org.modelador.Principal'
    }

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

spotless {

    format 'misc', {
        target '*.gradle', '.gitignore'
        trimTrailingWhitespace()
        indentWithSpaces(4)
        endWithNewline()
    }

    java {
        importOrder()
        removeUnusedImports()
        cleanthat()
        googleJavaFormat().aosp()
        formatAnnotations()
    }

}

test {
    useJUnitPlatform()
}
